# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.51 2009-02-19 14:07:12 ub Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.3.5 (2009/??/??)
 - (2009/02/19) Fixed bug# 3636 - Phone call link can be used without adding
    a body the ticket mask.
 - (2009/02/19) Fixed bug# 3671 - Priority in CustomerTicketZoom resets to
    pre-configured or 3.
 - (2009/02/13) Fixed bug# 3657 - Stats module: The locking attribute doesn't
    work.
 - (2009/02/11) Fixed ticket# 2009020942001554 - generic agent is logging many
    debug infos into log file.
 - (2009/02/09) Fixed bug# 3656 - The package manager testscript doesn't work
    on developer installations.
 - (2009/02/09) Fixed bug# 3458 - Length of E-mail adress form in
    AdminSystemAddressForm is way too short.
 - (2009/01/30) Fixed bug# 3635 - Was not able to install .opm packages bigger
    then 1MB (because of missing MySQL config) but OTRS error message was
    miss leading.
 - (2009/01/28) Fixed bug# 3242 - AdminGenericAgent produces apache-error-log
    entry.
 - (2009/01/26) Fixed bug# 3528 - Stats-cache-mechanism does not take unfixed
    restrictions in consideration.
 - (2009/01/23) Fixed bug# 3615 - The links to the related Customer User and
    related Group in [ Customer Users <-> Groups ] frontend were broken.
 - (2009/01/23) Fixed bug# 3499 - Permission problems if you change the
    configuration of the System::Permissions. Now it doesn't matter if you
    active or deactive one of the additional permissions.
 - (2009/01/22) Fixed bug# 3137 - Ticket search does not work with words like
    "BPX" and "new".
 - (2009/01/22) Fixed bug# 3596 - Show a warning, if some tries to renaming
    the admin group in admin frontend.

2.3.4 (2009/01/21)